# sudoku

./: .gitignore  Cargo.toml  README.md
sudoku-core/: Cargo.toml
sudoku-core/benches/: sudoku.rs
sudoku-core/src/: board.rs  checker.rs  difficulty.rs  generator.rs  hints.rs  lib.rs  solver.rs
sudoku-solver/: Cargo.toml  README.md
sudoku-solver/benches/: solver_bench.rs
sudoku-solver/src/: error.rs  generator.rs  lib.rs  main.rs  rating.rs  technique_tests.rs
sudoku-solver/src/grid/: candidates.rs  cell.rs  mod.rs  region.rs
sudoku-solver/src/rules/: chaining.rs  direct.rs  exclusion.rs  fish.rs  indirect.rs  locked.rs  mod.rs  strong_link.rs  subset.rs  subset_gen.rs  unique.rs  variant.rs  vlocking.rs  wing.rs
sudoku-solver/src/solver/: accumulator.rs  hint.rs  mod.rs
sudoku-tui/: Cargo.toml
sudoku-tui/src/: command.rs  config.rs  constants.rs  game.rs  main.rs  state.rs  terminal.rs
sudoku-tui/src/input/: controls.rs  global.rs  menu.rs  mod.rs  playing.rs
sudoku-tui/src/ui/: menu.rs  mod.rs  playing.rs
sukaku-rs/: Cargo.toml  TODO.md
sukaku-rs/src/: generator.rs  lib.rs  main.rs  rating.rs
sukaku-rs/src/grid/: candidates.rs  mod.rs
sukaku-rs/src/rules/: chaining.rs  direct.rs  exclusion.rs  fish.rs  indirect.rs  mod.rs  strong_link.rs  subset.rs  subset_gen.rs  unique.rs  variant.rs  vlocking.rs  wing.rs
sukaku-rs/src/solver/: accumulator.rs  hint.rs  mod.rs
