[package]
name = "sudoku-solver"
version = "0.1.0"
edition = "2021"
description = "Sudoku difficulty rater and generator"
license = "MIT"

[dependencies]
thiserror = "1.0"
rand = "0.8"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"

[dev-dependencies]
criterion = "0.5"
