[package]
name = "sukaku-rs"
version = "0.1.0"
edition = "2021"
description = "Sukaku difficulty rater and generator"
license = "MIT"

[dependencies]
thiserror = "1.0"
rand = "0.8"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"
